<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/TrackerPOIPanelTableLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SNewObjectID" >

        </TextView>

        <EditText
            android:id="@+id/edNewGMOID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="true"
            android:numeric="integer" >
        </EditText>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SNewObjectName" >
        </TextView>

        <EditText
            android:id="@+id/edNewGMOName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="true" >
        </EditText>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="4px" >

            <Button
                android:id="@+id/btnClosePanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/SCloseBtn2"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnNewObject"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btnClosePanel"
                android:text="@string/SAddNewObject"
                android:textSize="16dp" >
            </Button>
        </RelativeLayout>
    </TableLayout>

</ScrollView>